# nsclc-volume-capstone

./: .dstack.yml  .gitignore  LICENSE  Makefile  README.md  convert_raw.dstack.yml  dev-ca-mtl-3.dstack.yml  dev.dstack.yml  eval.dstack.yml  plan.md  predict.dstack.yml  preprocess.dstack.yml  pyproject.toml  train-ca-mtl-3.dstack.yml  train.dstack.yml  volume-ca-mtl-3.dstack.yml  volume.dstack.yml
configs/: default.yaml
docs/baselines/: nnunet.md
notebooks/: 01_preliminary_data_understanding.ipynb  02_data_exploration.ipynb  README.md
scripts/: analyze_nnunet_training.py  build_dataset_json.py  convert_lung1_to_nifti.py  generate_splits.py  nnunet_env.sh  nnunet_train_mps.py  populate_imagesTs.py  prepare_nnunet_dataset.py  run_external_nnunet_eval.sh  setup_runpod_volume.sh
src/: evaluate.py  inference.py  train.py
src/data/: dicom_io.py
src/preprocess/: prepare_data.py
src/utils/: geometry.py  metrics.py
